# ximple

./: CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  cliff.toml
.github/workflows/: ci.yaml  release.yaml
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: api.rs  from_xml.rs  lib.rs  provided.rs  test_utils.rs  to_xml.rs  traits.rs  types.rs
crates/core/src/de/: deserializer.rs  error.rs  event.rs  mod.rs  stream.rs
crates/core/src/de/error/: event_type.rs  inner.rs  mod.rs  public.rs  tag.rs
crates/core/src/impls/: collections.rs  mod.rs  primitives.rs  wrappers.rs
crates/core/src/ser/: error.rs  mod.rs  serializer.rs
crates/core/src/test_utils/: assertions.rs  mock_xml.rs  mod.rs
crates/core/src/types/: attributes.rs  mod.rs  name.rs
crates/core/tests/: mod.rs
crates/core/tests/derives/: enums.rs  mod.rs  structs.rs
crates/core/tests/ui/: union_not_supported.rs  union_not_supported.stderr
crates/core/tests/ui/attributes/: unknown_attribute.rs
crates/core/tests/ui/attributes/non_meta_list_attributes/: name_value_enum_container.rs  name_value_enum_field.rs  name_value_struct_container.rs  name_value_struct_field.rs  path_enum_container.rs  path_enum_field.rs  path_struct_container.rs  path_struct_field.rs
crates/core/tests/ui/from_xml/: union_not_supported.rs  union_not_supported.stderr
crates/core/tests/ui/to_xml/: union_not_supported.stderr
crates/macros/: Cargo.toml
crates/macros/src/: attribute_utils.rs  derive_to_xml.rs  lib.rs
crates/macros/src/derive_from_xml/: enums.rs  impls.rs  mod.rs  structs.rs
crates/macros/src/derive_to_xml/: enums.rs  mod.rs  structs.rs
