[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["gibbz00 <gabrielhansson00@gmail.com>"]
edition = "2021"
exclude = ["/.github"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gibbz00/ximple"
version = "0.1.0"

[workspace.dependencies]
ximple-macros = { path = "crates/macros", version = "0" }

damock = "0.1"
pretty_assertions = "1"
thiserror = "1"
xml = "0.8"

[workspace.lints.rust]
# TEMP: until release
# missing_docs = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
self_named_module_files = "deny"

[profile.dev]
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html#avoid-linking-debug-info
debug = 0
strip = "debuginfo"
