[package]
name = "ximple"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
ximple-macros.workspace = true

[dev-dependencies]
trybuild = "1.0"
