[package]
name = "ximple"

authors.workspace = true
edition.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
ximple-macros.workspace = true

xml.workspace = true

[dev-dependencies]
damock.workspace = true
pretty_assertions.workspace = true
trybuild = "1.0"
